# pyflattendb

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
pyflattendb/: __init__.py  generator.py
tests/: generator_test.py  primary_keys_test.py  pydantic_generation_test.py  sqlalchemy_generation_test.py
